--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-  "recommendations": [
-    "sswg.swift-lang",
-    "Kasik96.swift",
-    "formulahendry.code-runner",
-    "VisualStudioExptTeam.vscodeintellicode",
-    "VisualStudioExptTeam.intellicode-api-usage-examples"
-  ]
+  "recommendations": ["formulahendry.code-runner"]
 }
