--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Running your app...",
       "type": "shell",
-      "command": "swiftc Hello.swift",
+      "command": "swift Hello.swift",
       "presentation": {
         "reveal": "always",
         "panel": "new"
